Button for low/high, LED indicator.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,5 @@
 platform = atmelsam
 board = adafruit_itsybitsy_m4
 framework = arduino
-lib_deps = alextaujenis/RBD_Timer@^1.3.2
+lib_deps = 
+	alextaujenis/RBD_Timer@^1.3.2
