--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:adafruit_itsybitsy_m4]
-platform = atmelsam
-board = adafruit_itsybitsy_m4
+[platformio]
+
+[env:m5stack-atom]
+
+platform = espressif32
+board = m5stack-atom
 framework = arduino
-lib_deps = 
-	alextaujenis/RBD_Timer@^1.3.2
+
+lib_deps =
+    adafruit/Adafruit NeoPixel@^1.11.0
+	fastled/FastLED@^3.5.0
+    alextaujenis/RBD_Timer@^1.3.2
+    m5stack/M5Atom @ ^0.1.1
+
